--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="js/jquery.i18n.properties-min.js"></script>	
 	
-	<script src="js/constants.js"></script>
+	<script src="core/js/constants.js"></script>
 	<script src="js/functions.js"></script>	
 	
 	<link rel="stylesheet" type="text/css" href="core/css/controls.css"	/>	
