Replace minified resources in .html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,9 +12,12 @@
 	<script src="core/js/constants.js"></script>
 	<script src="js/functions.js"></script>	
 	
-	<link rel="stylesheet" type="text/css" href="core/css/controls.css"	/>	
+	<!--replaceCSS-->  
+	<link rel="stylesheet" type="text/css" href="core/css/controls.css"	/>
+	<!--replaceCSSEnd-->	
 	<link rel="stylesheet" type="text/css" href="css/main.css"	/>		
 	
+	<!--replaceJS-->  
 	<script src="core/js/basicControl.js"></script>
 	<script src="core/js/labelControl.js"></script>
 	<script src="core/js/horizontalLayoutControl.js"></script>
@@ -34,6 +37,7 @@
 	<script src="core/js/notificationMessageControl.js"></script>
 	<script src="core/js/wrapperControl.js"></script>
 	<script src="core/js/htmlEditorControl.js"></script>
+	<!--replaceJSEnd-->  
 </head>
 <body>
 	<div id="content"></div>
